--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_below="@id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="101dp"
-        android:text="Enter your name bellow"
+        android:text="@string/firstMessage"
         android:textAlignment="center"
         android:textSize="20sp" />
 
@@ -40,7 +40,7 @@
         android:layout_marginBottom="92dp"
         android:background="#5151CC"
         android:onClick="startCreatingList"
-        android:text="Create List"
+        android:text="@string/createList"
         android:textAlignment="center"
         android:textColor="#FFFFFF" />
 </RelativeLayout>
